2008-06-19  Jonathan Pryor  <jpryor@novell.com>

	* String.cs: Remove EachLine(), re-implement Lines() in terms of
	  TextReaderRocks.Lines(), and add a Words() extension method.
	* TextReader.cs: Added; extension methods Lines() and Words() for
	  TextReader instances.

2008-06-18  Jonathan Pryor  <jpryor@novell.com>

	* Int32.cs: Remove [Obsolete] methods.

2008-06-18  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Rename AggregateWithHistory() to AggregateHistory()
	  and AggregateReverseWithHistory() to AggregateReverseHistory().

2008-06-18  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: 
	  - Change semantics of AggregateReverse(), AggregateWithHistory(), 
	    AggregateReverseWithHistory() so that an empty sequence is invalid 
	    only if a seed value isn't provided.  This matches the semantics 
	    of Aggregate().  
	  - Fix AggregateWithHistory() and AggregateReverseWithHistory() so that
	    parameter-checking exceptions are emitted immediately, not delayed.
	  - Fix *WithHistory() so they don't return too many elements.
	  - Parameter name cleanup/consistency.

2008-06-18  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Rename Join() to Implode(), as .NET already provides a
	  Join() function with completely different semantics (SQL JOIN, i.e. list
	  intersection), so this should remove ambiguity/confusion.

2008-06-17  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Source().
	* IEnumerable.cs: Add error checking to .Sort() methods.  Add
	  .SelectFromEach() overloads to accept up to 4 lists (i.e. Haskell zip, 
	  zip3, and zip4 are now supported).  Change semantics of .SelectFromEach()
	  to accept empty lists (previously this would throw an
	  InvalidOperationException, but Haskell permits empty lists so why not?).

2008-06-17  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.SourceAndFunc().
	* Int32.cs: Obsolete Times(int,Action<int>), UpTo(int,int,Action<int>),