@@ -41,7 +41,7 @@ namespace Mono.Rocks.Tests {
 
 		[Test]
 		[ExpectedException (typeof (ArgumentNullException))]
-		public void Lines_SourceNull ()
+		public void Lines_SelfNull ()
 		{
 			string s = null;
 			s.Lines ();
@@ -72,7 +72,7 @@ namespace Mono.Rocks.Tests {
 
 		[Test]
 		[ExpectedException (typeof (ArgumentNullException))]
-		public void Words_SourceNull ()
+		public void Words_SelfNull ()
 		{
 			string s = null;
 			s.Words ();
